# UFO-Cells

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: linux.yml  runner.yml  windows.yml
cmake/: BuildMiniswigWrapper.cmake  BuildProgramFile.cmake  ProvideSquirrel.cmake
games/dummy_test/: custom_dynamic_solid.cpp  custom_dynamic_solid.h  dummy.cpp  dummy.h  dummy_test_game.cpp  dummy_test_game.h  dummy_test_layer_actor.cpp  dummy_test_layer_actor.h  game_base_state.cpp  game_base_state.h  optimised_dummy.cpp  optimised_dummy.h  state_load.cpp  state_load.h  state_menu.cpp  state_menu.h  state_play.cpp  state_play.h
games/dummy_test/res/map/shallow_water/: shallow_water.json  wetland.aseprite
games/dummy_test/res/map/windmill/: windmill.aseprite  windmill.json
games/dummy_test/res/map/zen/: zen.json  zen_garden.aseprite
games/dummy_test/res/map/zen_chunked/: zen_chunked.aseprite  zen_chunked.json
games/dummy_test/scripts/: menus.nut  new.nut  test.nut  update.nut  update_menus.nut
games/island/: custom_type_registry.cpp  custom_type_registry.h  inventory.h  island.cpp  island.h  optimised_dummy.cpp  optimised_dummy.h  state_load.cpp  state_load.h  state_play.cpp  state_play.h  type_registry.h  type_reigstry.cpp
games/island/res/map/windmill/: windmill.json  windmill_chunked.aseprite
games/island/res/maps/windmill/: windmill.json
games/leg0/: anim_snowman.cpp  anim_snowman.h  leg0.cpp  leg0.h  state_default.cpp  state_default.h
games/pseudo_3d/: pseudo_3d.cpp  pseudo_3d.h
res/: visible_terrain.aseprite
res/documentation/: documentation.txt
res/map/windmill/: windmill.aseprite  windmill.json
res/map/zen/: zen_garden.aseprite
src/: assets.cpp  assets.h  camera.cpp  camera.h  cell_actor.cpp  cell_actor.h  cellmap.cpp  cellmap.h  cellmaps.h  collision_utils.cpp  colour_utils.cpp  colour_utils.h  dummy.cpp  dummy.h  entity.cpp  entity.h  file_utils.cpp  file_utils.h  matrix2.h  misc_math.h  mouse_control.cpp  mouse_control.h  program.cpp  program.h  rect.h
src/dummy_test/: dummy.cpp  dummy.h
src/dummy_test/scripts/: user_interface.nut
src/editor/: editor.cpp  editor.h
src/program/: main.cpp  program.cpp  program.h  ufo_global.cpp  ufo_global.h
src/scripting/: api.cpp  api.h  wrapper.cpp  wrapper.h
src/scripting_utils/: pge_mirror.hpp  squirrel_interface.cpp  squirrel_interface.h  ufo_squirrel_vm_manager.cpp  ufo_squirrel_vm_manager.h
src/ufo/: actor.cpp  actor.h  actor_info.h  adjust_ray_against_normal_2.cpp  anim_common.cpp  anim_common.h  animation.cpp  animation.h  asset_manager.cpp  asset_manager.h  assets.cpp  assets.h  button.cpp  button.h  camera.cpp  camera.h  cell_actor.cpp  cell_actor.h  cellmap.cpp  cellmap.h  character_animation.h  circle.h  circle_vs_ray_2.cpp  collision_body.cpp  collision_body.h  collision_data.h  collision_system.h  collision_utils.cpp  collision_utils.h  colour_utils.cpp  colour_utils.h  component.cpp  component.h  component_system.h  component_wrapper.h  console.h  container.h  dummy.cpp  dynamic_solid.cpp  dynamic_solid.h  (+71 more)
